# saketo

./: .gitignore  .gitmodules  README.md  pubspec.yaml
android/app/src/main/: AndroidManifest.xml
lib/: main.dart  routes.dart
lib/db/main/: objectbox-model.json  objectbox.g.dart
lib/db/secure/: secure_db.dart
lib/error_handling/: result.dart
lib/ffi/: fastscan.dart  ffi.dart
lib/l10n/: app_en.arb
lib/nodes/: node.dart
lib/pages/: enter_password_page.dart  entrypoint.dart  main_wallet_page.dart  prerelease_disclaimer_page.dart
lib/pages/network/: main_network_page.dart
lib/pages/network/nodes/: add_or_edit_node_page.dart  manage_nodes_page.dart
lib/pages/onboarding/: mnemonic_display_page.dart  mnemonic_input_page.dart  mode_selection_page.dart  preview_configuration_page.dart
lib/pages/receive/: main_recive_page.dart
lib/pages/settings/: main_settings_page.dart
lib/rpc/: monero_rpc.dart
lib/rust_ffi/: rust_ffi.dart
lib/services/: sync_service.dart
lib/wallet/: wallet.dart
lib/wallet/chain/: data_types.dart
lib/wallet/mnemonics/: legacy_mnemonic_type.dart  mnemonic_type.dart  mymonero_mnemonic_type.dart  polyseed_mnemonic_type.dart
lib/wallet/mnemonics/polyseed/: polyseed_mnemonic_type.dart
lib/wallet/modes/: advanced_mode.dart  basic_mode.dart  business_mode.dart  hardware_mode.dart  lightweight_mode.dart  multisignature_mode.dart  paranoia_mode.dart  wallet_mode_abstract.dart
rust/: Cargo.toml
rust/src/: lib.rs
